--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>io.thadow.parkourrun</groupId>
     <artifactId>ParkourRun</artifactId>
-    <version>${project.version}</version>
+    <version>1.0</version>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
