Stable Build - build2

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,17 +1,12 @@
 Configuration:
+  Debug: false
   StorageType: LOCAL # LOCAL, MySQL
   MySQL:
-    Enabled: false
     Database: database
     Host: localhost
     Port: 3306
     Username: root
     Password: root
+    SSL: false
   Arenas:
     Per Arena Chat: true
-    Disable Fall Damage: true
-    Win:
-      Need All Checkpoints: true
-    Loses:
-      Add On Arena Leave/Disconnect: true
-      Add On Arena Tie: true
