--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>io.thadow.parkourrun</groupId>
     <artifactId>ParkourRun</artifactId>
-    <version>1.0</version>
+    <version>build2</version>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -46,5 +46,4 @@
             <scope>provided</scope>
         </dependency>
     </dependencies>
-
 </project>
