--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,6 +1,9 @@
 Configuration:
   Debug: false
-  StorageType: LOCAL # LOCAL, MySQL
+  StorageType: LOCAL # LOCAL, MySQL, TRANSFORM, only use this to transform data from MySQL to LOCAL and vice versa
+  Transform:
+    From: LOCAL
+    To: MySQL
   MySQL:
     Database: database
     Host: localhost
