Changed arena config system, added action cooldowns, arena system changed

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -13,3 +13,6 @@ Configuration:
     SSL: false
   Arenas:
     Per Arena Chat: true
+    Checkpoints:
+      Under Block: EMERALD_BLOCK
+      Plate: GOLD_PLATE
