--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -150,6 +150,7 @@ Messages:
         Enabled: true
         Sound: NOTE_PLING;10;10
   Commands:
+    Invalid Number: "&cNumero Invalido!"
     Main Command:
       Usages:
         - "&m&e---------------------------------"
