Fixed arena config system

--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -33,7 +33,8 @@ Messages:
       Min Players Set: "%prefix% &aCantidad minima de jugadores cambiada correctamente! &7(Cantidad: %minPlayers% - ArenaID: %arenaID%)"
       Max Players Set: "%prefix% &aCantidad maxima de jugadores cambiada correctamente! &7(Cantidad: %maxPlayers% - ArenaID: %arenaID%)"
       Wait Time Set: "%prefix% &aTiempo de espera cambiado correctamente! &7(Tiempo: %time% - ArenaID: %arenaID%)"
-      Wait Time To Re-Enable: "%prefix% &aTiempo de espera de re-activación cambiado correctamente! &7(Tiempo: %time% - ArenaID: %arenaID%)"
+      Wait Time To Re-Enable Set: "%prefix% &aTiempo de espera de re-activación cambiado correctamente! &7(Tiempo: %time% - ArenaID: %arenaID%)"
+      Max Time Set: "%prefix% &aTiempo maximo cambiado correctamente! &7(Tiempo: %time% - ArenaID: %arenaID%)"
       Arena Name Set: "%prefix% &aNombre de la arena cambiado correctamente! &7(Nombre: %arenaName%&7 - ArenaID: %arenaID%)"
       Win Zone Set: "%prefix% &aRegion de la WinZone cambiada correctamente! &7(XYZ: %x%-%y%-%z%, Esquina: %corner% - ArenaID: %arenaID%)"
       Arena Zone Set: "%prefix% &cRegion de la Arena cambiada correctamente! &7(XYZ: %x%-%y%-%z%, Esquina: %corner% - ArenaID: %arenaID%)"
@@ -157,7 +158,7 @@ Messages:
         - ""
         - "&aComandos disponibles:"
         - ""
-        - "&e/pkr createArena (arenaID) (minPlayers) (maxPlayers) (arenaName)"
+        - "&e/pkr createArena (arenaID)"
         - "&e/pkr deleteArena (arenaID)"
         - "&e/pkr disableArena (arenaID)"
         - "&e/pkr enableArena (arenaID)"
@@ -170,6 +171,7 @@ Messages:
         - "&e/pkr setMaxPlayers (maxPlayers) (arenaID)"
         - "&e/pkr setWaitTime (time in seconds) (arenaID)"
         - "&e/pkr setWaitTimeToReEnable (time in seconds) (arenaID)"
+        - "&e/pkr setMaxTime (time in seconds) (arenaID)"
         - "&e/pkr setArenaName (arenaID) (arenaName)"
         - "&e/pkr setWinZone pos1/pos2 (arenaID)"
         - "&e/pkr setArenaZone pos1/pos2 (arenaID)"
