Fixed a lot of bugs, added version support

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,6 +2,7 @@ name: ParkoruRun
 main: io.thadow.parkourrun.Main
 author: Thadow (Nicolás)
 version: build2
+api-version: 1.13
 depend: [PlaceholderAPI]
 
 commands:
