--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
 
     <groupId>io.thadow.parkourrun</groupId>
     <artifactId>ParkourRun</artifactId>
+    <packaging>pom</packaging>
     <version>build2</version>
 
     <properties>
@@ -13,6 +14,23 @@
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
+
+    <modules>
+        <module>support_v_1_8_R3</module>
+        <module>support_v_1_9_R2</module>
+        <module>support_v_1_10_R1</module>
+        <module>support_v_1_11_R1</module>
+        <module>support_v_1_12_R1</module>
+        <module>support_v_1_13_R2</module>
+        <module>support_v_1_14_R1</module>
+        <module>support_v_1_15_R1</module>
+        <module>support_v_1_16_R1</module>
+        <module>support_v_1_16_R2</module>
+        <module>support_v_1_16_R3</module>
+        <module>support_v_1_17_R1</module>
+        <module>support_v_1_18_R1</module>
+        <module>support_v_1_19_R1</module>
+    </modules>
 
     <repositories>
         <repository>
