--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>io.thadow.parkourrun</groupId>
     <artifactId>ParkourRun</artifactId>
     <packaging>pom</packaging>
-    <version>build2</version>
+    <version>Stable-Build3</version>
     <modules>
         <module>support_v_1_8_R3</module>
         <module>support_v_1_9_R2</module>
@@ -54,12 +54,6 @@
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>2.11.0</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.spigotmc</groupId>
-            <artifactId>spigot-api</artifactId>
-            <version>1.8.8-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <!--Bukkit API-->
