--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: ParkoruRun
 main: io.thadow.parkourrun.Main
 author: Thadow (Nicolás)
-version: build2
+version: Stable-Build3
 api-version: 1.13
 depend: [PlaceholderAPI]
 
