--- a/support_v_1_17_R1/pom.xml
+++ b/support_v_1_17_R1/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>ParkourRun</artifactId>
         <groupId>io.thadow.parkourrun</groupId>
-        <version>build2</version>
+        <version>Stable-Build3</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
